--- a/css/navigation.css
+++ b/css/navigation.css
@@ -187,3 +187,14 @@
     top: 5.5rem;
   }
 }
+
+@media only screen and (max-width: 37.5em) {
+  .navigation__btn {
+    top: 3rem;
+    right: 3rem;
+  }
+  .navigation__popin {
+    top: 3.5rem;
+    right: 3.5rem;
+  }
+}
